# coreason-ai-gateway

./: .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  NOTICE  README.md  any-exprs.txt  coverage.json  debug_redis_type.py  linecount.txt  lineprecision.txt  mkdocs.yml  mypy.xml  pyproject.toml  requirements.txt  types-of-anys.txt
docs/: architecture_vignette.md  index.md  product_requirements.md
src/coreason_ai_gateway/: __init__.py  config.py  dependencies.py  exception_handlers.py  main.py  routing.py  schemas.py  server.py  service.py
src/coreason_ai_gateway/middleware/: __init__.py  accounting.py  auth.py  budget.py
src/coreason_ai_gateway/routers/: chat.py
src/coreason_ai_gateway/utils/: __init__.py  logger.py
tests/: conftest.py  test_config.py  test_dependencies_coverage.py  test_exception_handlers_coverage.py  test_integration_respx.py  test_logger_coverage.py  test_main.py  test_middleware_auth.py  test_middleware_budget.py  test_misc_coverage.py  test_routing.py  test_routing_edge_cases.py  test_server_edge_cases.py  test_server_endpoint.py  test_server_lifecycle.py  test_server_lifecycle_edge_cases.py  test_server_retry.py  test_server_retry_complex.py  test_service.py  test_trace_id.py  test_trace_id_complex.py  test_utils.py
tests/middleware/: test_accounting.py
